@@ -14,10 +14,9 @@ class WC_REST_Connect_Address_Normalization_Controller extends WC_REST_Connect_B
 	public function post( $request ) {
 		$data    = $request->get_json_params();
 		$address = $data['address'];
-		$company = $address['company'];
 		$phone   = $address['phone'];
 
-		unset( $address['company'], $address['phone'] );
+		unset( $address['phone'] );
 
 		$body     = array(
 			'destination' => $address,
@@ -42,9 +41,8 @@ class WC_REST_Connect_Address_Normalization_Controller extends WC_REST_Connect_B
 			);
 		}
 
-		$response->normalized->company = $company;
-		$response->normalized->phone   = $phone;
-		$is_trivial_normalization      = isset( $response->is_trivial_normalization ) ? $response->is_trivial_normalization : false;
+		$response->normalized->phone = $phone;
+		$is_trivial_normalization    = isset( $response->is_trivial_normalization ) ? $response->is_trivial_normalization : false;
 
 		return array(
 			'success'                  => true,
