@@ -1,8 +1,9 @@
 *** WooCommerce Shipping & Tax Changelog ***
 
 = 1.25.23 - 2022-xx-xx =
-* Fix - Added "Delete California tax rates" tool.
-* Fix - Extract WC_Connect_TaxJar_Integration::backup_existing_tax_rates() for re-usability.
+* Tweak - Make "Name" field optional if "Company" field is not empty.
+* Fix   - Added "Delete California tax rates" tool.
+* Fix   - Extract WC_Connect_TaxJar_Integration::backup_existing_tax_rates() for re-usability.
 
 = 1.25.22 - 2022-02-02 =
 * Fix   - TaxJar does not get the tax if the cart has non-taxable item.
